tests/if.err.out
error: if.err.li 1,4: non-bool type used as if condition
    1 | if 1 + 1 {
      |    ^^^^^
error: if.err.li 2,11: non-bool type used as if condition
    2 | } else if 1 + 2 {
      |           ^^^^^
